--- a/REPORT/1062FinReport/index.html
+++ b/REPORT/1062FinReport/index.html
@@ -16,7 +16,6 @@
 	  h3.title{padding:0 0 5px 0}
 	  body{background-color:#D2E9FF;text-align:center;}
 	  .titleArea{background-color:#003D79;color:white;}
-	  .left{text-align:left}
 	  table{border-top:2px solid #ACD6FF}
 	  table{border-bottom:2px solid #ACD6FF}
 	  th{border-bottom:3px solid #ACD6FF}
@@ -35,32 +34,38 @@
       <div class='row'>
         <table class='table'>
 			<tr><th>入選</th><th>組別</th><th>組員</th><th>主題</th><th>書面</th><th>Shiny</th></tr>
-			<tr 1><td rowspan="2" >🥉</td><td rowspan="2" >G1</td><td class='left' rowspan="2" >劉品吟、陳艾琳、邱文心</td><td class='left'>全台鄉鎮離婚率大揭密</td><td><a href='G1.pdf'>📖</a></td><td><a href='https://beta.rstudioconnect.com/content/3796/'>🧿</a></td></tr>
-				<tr><td class='left'>（附註：北北基版本）</td><td></td><td><a href='https://beta.rstudioconnect.com/content/3798/'>🧿</a></td></tr>
-			<tr 2><td></td><td>G2</td><td class='left'>劉向倢、邵旻純、廖原平</td><td class='left'>The Fast and the Limit</td><td><a href='G2.pdf'>📖</a></td><td><a href='https://hsiang.shinyapps.io/shiny/'>🧿</a></td></tr>
-			<tr 3><td></td><td>G3</td><td class='left'>蔡賸豐、黃亭樺</td><td class='left'>死亡率與年收</td><td><a href='G3.pdf'>📖</a></td><td><a href='https://meteoricstar.shinyapps.io/diemap/'>🧿</a></td></tr>
-			<tr 4><td>🏅</td><td>G4</td><td class='left'>江偉銘、林穎東、藍巧穎</td><td class='left'>旅行青蛙: 跟著青蛙 PAPAGO!</td><td><a href='G4.pdf'>📖</a></td><td><a href='https://dannyjiang.shinyapps.io/finaltest/'>🧿</a></td></tr>
-			<tr 5><td rowspan="2" >🏅</td><td rowspan="2" >G5</td><td class='left' rowspan="2" >葉乃慈、魏筱蓉、張儒斌</td><td class='left'>你安全嗎？──Taipei AED Help</td><td><a href='G5.pdf'>📖</a></td><td><a href='https://siaorong.shinyapps.io/TPE__AED/'>🧿</a></td></tr>
-				<tr><td class='left'>（附註：測試範例檔案下載連結）</td><td></td><td><a href='https://drive.google.com/file/d/1dgKkA0cisTdOzG95-vINEgTe2ue0QUsF/view'>🔗</a></td></tr>
-			<tr 6><td rowspan="2" ></td><td rowspan="2" >G6</td><td class='left' rowspan="2" >黃語如、林尚薇、李欣儒</td><td class='left'>足球與空間</td><td><a href='G6.pdf'>📖</a></td><td><a href='https://worldcup.shinyapps.io/SoccerAnalysis/'>🧿</a></td></tr>
-				<tr><td class='left'>（附註：世足酒吧最佳路徑規劃）</td><td></td><td><a href='http://homepage.ntu.edu.tw/~b03208008/optim.html'>🔗</a></td></tr>
-			<tr 7><td>🏅</td><td>G7</td><td class='left'>陳柏宇</td><td class='left'>臺北市偷竊事件空間分析</td><td><a href='G7.pdf'>📖</a></td><td><a href='https://gururu.shinyapps.io/bike/'>🧿</a></td></tr>
-			<tr 8><td></td><td>G8</td><td class='left'>賴聰儀、陳立恆、簡明柔</td><td class='left'>台北市癌症分布</td><td><a href='G8.pdf'>📖</a></td><td><a href='https://go253697.shinyapps.io/presentation/'>🧿</a></td></tr>
-			<tr 9><td></td><td>G9</td><td class='left'>廖容瑾、李依倢</td><td class='left'>Bicycle Theft in Taipei </td><td><a href='G9.pdf'>📖</a></td><td><a href='https://r05228014.shinyapps.io/SAfinal/'>🧿</a></td></tr>
-			<tr 10><td>🥇</td><td>G10</td><td class='left'>劉怡慧、廖晧宇、謝澤星</td><td class='left'>誰主導了租金</td><td><a href='G10.jpg'>📖</a></td><td><a href='https://annieliao.shinyapps.io/Final_Project/'>🧿</a></td></tr>
-			<tr 12><td></td><td>G12</td><td class='left'>王博群</td><td class='left'>新北市公立高中分布</td><td><a href='G12.pdf'>📖</a></td><td><a href='https://nicopeterwang.shinyapps.io/final_project3/'>🧿</a></td></tr>
-			<tr 13><td>🏅</td><td>G13</td><td class='left'>廖章鈞、王崧阡、郭飛鷹</td><td class='left'>台北市交通事故與即時公車資訊之空間相依性</td><td><a href='G13.pdf'>📖</a></td><td><a href='http://homepage.ntu.edu.tw/~f04228002/TaipeiBus/TaipeiBus_v2.html'>🧿</a></td></tr>
-			<tr 14><td rowspan="2" >🥈</td><td rowspan="2" >G14</td><td class='left' rowspan="2" >許仁瑋、蕭士傑</td><td class='left'>GPS 空間內插高程速度場</td><td><a href='G14.pdf'>📖</a></td><td><a href='https://pipi.shinyapps.io/final/'>🧿</a></td></tr>
-				<tr><td class='left'>（附註：台北市 GPS 時序資料下載連結）</td><td></td><td><a href='https://drive.google.com/drive/folders/13QcqlPk1CsjUWNocJE-MCGKs3U670UFO'>🔗</a></td></tr>
-			<tr 15><td>🏅</td><td>G15</td><td class='left'>楊宇翔、劉恒、劉子立</td><td class='left'>雷厲鬼島，凶！──台灣地區落雷資料空間分析</td><td><a href='G15.pdf'>📖</a></td><td><a href='https://phineees.shinyapps.io/Thunder/'>🧿</a></td></tr>
-			<tr 16><td>🥉</td><td>G16</td><td class='left'>田梓伶、賴冠宇、吳家禎</td><td class='left'>Magic of Lotto: 地理理系教你怎麼中樂透</td><td><a href='G16.pdf'>📖</a></td><td><a href='https://guan.shinyapps.io/magiclotto/'>🧿</a></td></tr>
-			<tr 18><td>🥈</td><td>G18</td><td class='left'>方皓聖、黃夢萍</td><td class='left'>應用 Network KDE 偵測台北市道路車禍熱區</td><td><a href='G18.pdf'>📖</a></td><td><a href='https://40040205s.shinyapps.io/NetworkKDE/'>🧿</a></td></tr>
-			<tr 19><td>🏅</td><td>G19</td><td class='left'>陳冠甫、羅宇志、張宗翰</td><td class='left'>哪裡生意好做？空間外溢推估──以飲料店為例</td><td><a href='G19.pdf'>📖</a></td><td><a href='https://c1204545.shinyapps.io/newkkk/'>🧿</a></td></tr>
-			<tr 20><td></td><td>G20</td><td class='left'>林彥廷</td><td class='left'>台中民間信仰寺廟空間初探</td><td><a href='G20.pdf'>📖</a></td><td><a href='https://mumimumi.shinyapps.io/Final_Project/'>🧿</a></td></tr>
-			<tr 21><td>🏅</td><td>G21</td><td class='left'>李俊毅、詹玟、黃彥蓉</td><td class='left'>相揪去吃飯！老人共餐地理資訊查詢系統</td><td><a href='G21.pdf'>📖</a></td><td><a href='https://louisligis.shinyapps.io/new5_3/'>🧿</a></td></tr>
-			<tr 23><td></td><td>G23</td><td class='left'>莊浩平、王許裕民</td><td class='left'>台灣毒品犯罪區位分佈 </td><td><a href='G23.pdf'>📖</a></td><td><a href=''>🧿</a></td></tr>
+			<tr><td rowspan="2" >🥉</td><td rowspan="2" >G1</td><td rowspan="2" >劉品吟、陳艾琳、邱文心</td><td>全台鄉鎮離婚率大揭密</td><td><a href='G1.pdf'>📖</a></td><td><a href='https://beta.rstudioconnect.com/content/3796/'>🧿</a></td></tr>
+				<tr class="ps"><td>（附註：北北基版本）</td><td></td><td><a href='https://beta.rstudioconnect.com/content/3798/'>🧿</a></td></tr>
+			<tr><td></td><td>G2</td><td>劉向倢、邵旻純、廖原平</td><td>The Fast and the Limit</td><td><a href='G2.pdf'>📖</a></td><td><a href='https://hsiang.shinyapps.io/shiny/'>🧿</a></td></tr>
+			<tr><td></td><td>G3</td><td>蔡賸豐、黃亭樺</td><td>死亡率與年收</td><td><a href='G3.pdf'>📖</a></td><td><a href='https://meteoricstar.shinyapps.io/diemap/'>🧿</a></td></tr>
+			<tr><td>🏅</td><td>G4</td><td>江偉銘、林穎東、藍巧穎</td><td>旅行青蛙: 跟著青蛙 PAPAGO!</td><td><a href='G4.pdf'>📖</a></td><td><a href='https://dannyjiang.shinyapps.io/finaltest/'>🧿</a></td></tr>
+			<tr><td rowspan="2" >🏅</td><td rowspan="2" >G5</td><td rowspan="2" >葉乃慈、魏筱蓉、張儒斌</td><td>你安全嗎？──Taipei AED Help</td><td><a href='G5.pdf'>📖</a></td><td><a href='https://siaorong.shinyapps.io/TPE__AED/'>🧿</a></td></tr>
+				<tr class="ps"><td>（附註：測試範例檔案下載連結）</td><td></td><td><a href='https://drive.google.com/file/d/1dgKkA0cisTdOzG95-vINEgTe2ue0QUsF/view'>🔗</a></td></tr>
+			<tr><td rowspan="2" ></td><td rowspan="2" >G6</td><td rowspan="2" >黃語如、林尚薇、李欣儒</td><td>足球與空間</td><td><a href='G6.pdf'>📖</a></td><td><a href='https://worldcup.shinyapps.io/SoccerAnalysis/'>🧿</a></td></tr>
+				<tr class="ps"><td>（附註：世足酒吧最佳路徑規劃）</td><td></td><td><a href='http://homepage.ntu.edu.tw/~b03208008/optim.html'>🔗</a></td></tr>
+			<tr><td>🏅</td><td>G7</td><td>陳柏宇</td><td>臺北市偷竊事件空間分析</td><td><a href='G7.pdf'>📖</a></td><td><a href='https://gururu.shinyapps.io/bike/'>🧿</a></td></tr>
+			<tr><td></td><td>G8</td><td>賴聰儀、陳立恆、簡明柔</td><td>台北市癌症分布</td><td><a href='G8.pdf'>📖</a></td><td><a href='https://go253697.shinyapps.io/presentation/'>🧿</a></td></tr>
+			<tr><td></td><td>G9</td><td>廖容瑾、李依倢</td><td>Bicycle Theft in Taipei </td><td><a href='G9.pdf'>📖</a></td><td><a href='https://r05228014.shinyapps.io/SAfinal/'>🧿</a></td></tr>
+			<tr><td>🥇</td><td>G10</td><td>劉怡慧、廖晧宇、謝澤星</td><td>誰主導了租金</td><td><a href='G10.jpg'>📖</a></td><td><a href='https://annieliao.shinyapps.io/Final_Project/'>🧿</a></td></tr>
+			<tr><td></td><td>G12</td><td>王博群</td><td>新北市公立高中分布</td><td><a href='G12.pdf'>📖</a></td><td><a href='https://nicopeterwang.shinyapps.io/final_project3/'>🧿</a></td></tr>
+			<tr><td>🏅</td><td>G13</td><td>廖章鈞、王崧阡、郭飛鷹</td><td>台北市交通事故與即時公車資訊之空間相依性</td><td><a href='G13.pdf'>📖</a></td><td><a href='http://homepage.ntu.edu.tw/~f04228002/TaipeiBus/TaipeiBus_v2.html'>🧿</a></td></tr>
+			<tr><td rowspan="2" >🥈</td><td rowspan="2" >G14</td><td rowspan="2" >許仁瑋、蕭士傑</td><td>GPS 空間內插高程速度場</td><td><a href='G14.pdf'>📖</a></td><td><a href='https://pipi.shinyapps.io/final/'>🧿</a></td></tr>
+				<tr class="ps"><td>（附註：台北市 GPS 時序資料下載連結）</td><td></td><td><a href='https://drive.google.com/drive/folders/13QcqlPk1CsjUWNocJE-MCGKs3U670UFO'>🔗</a></td></tr>
+			<tr><td>🏅</td><td>G15</td><td>楊宇翔、劉恒、劉子立</td><td>雷厲鬼島，凶！──台灣地區落雷資料空間分析</td><td><a href='G15.pdf'>📖</a></td><td><a href='https://phineees.shinyapps.io/Thunder/'>🧿</a></td></tr>
+			<tr><td>🥉</td><td>G16</td><td>田梓伶、賴冠宇、吳家禎</td><td>Magic of Lotto: 地理理系教你怎麼中樂透</td><td><a href='G16.pdf'>📖</a></td><td><a href='https://guan.shinyapps.io/magiclotto/'>🧿</a></td></tr>
+			<tr><td>🥈</td><td>G18</td><td>方皓聖、黃夢萍</td><td>應用 Network KDE 偵測台北市道路車禍熱區</td><td><a href='G18.pdf'>📖</a></td><td><a href='https://40040205s.shinyapps.io/NetworkKDE/'>🧿</a></td></tr>
+			<tr><td>🏅</td><td>G19</td><td>陳冠甫、羅宇志、張宗翰</td><td>哪裡生意好做？空間外溢推估──以飲料店為例</td><td><a href='G19.pdf'>📖</a></td><td><a href='https://c1204545.shinyapps.io/newkkk/'>🧿</a></td></tr>
+			<tr><td></td><td>G20</td><td>林彥廷</td><td>台中民間信仰寺廟空間初探</td><td><a href='G20.pdf'>📖</a></td><td><a href='https://mumimumi.shinyapps.io/Final_Project/'>🧿</a></td></tr>
+			<tr><td>🏅</td><td>G21</td><td>李俊毅、詹玟、黃彥蓉</td><td>相揪去吃飯！老人共餐地理資訊查詢系統</td><td><a href='G21.pdf'>📖</a></td><td><a href='https://louisligis.shinyapps.io/new5_3/'>🧿</a></td></tr>
+			<tr><td></td><td>G23</td><td>莊浩平、王許裕民</td><td>台灣毒品犯罪區位分佈 </td><td><a href='G23.pdf'>📖</a></td><td><a href=''>🧿</a></td></tr>
 		</table>
       </div>
 	</div>
+	<script>
+	$('td:nth-child(3),th:nth-child(3)').hide();
+	$('td:nth-child(4)').css("text-align","left");
+	$('.ps>td').show();
+	$('.ps>td:nth-child(1)').css("text-align","left");
+	</script>
   </body>
 </html>
