--- a/REPORT/1062MidReport/index.html
+++ b/REPORT/1062MidReport/index.html
@@ -16,7 +16,6 @@
 	  h3.title{padding:0 0 5px 0}
 	  body{background-color:#D1E9E9;text-align:center;}
 	  .titleArea{background-color:#408080;color:white;}
-	  .left{text-align:left}
 	  table{border-top:2px solid 	#B3D9D9}
 	  table{border-bottom:2px solid	#B3D9D9}
 	  th{border-bottom:3px solid	#B3D9D9}
@@ -35,29 +34,33 @@
       <div class='row'>
         <table class='table'>
 			<tr><th>入選</th><th>組別</th><th>組員</th><th>主題</th><th>書面</th><th>Shiny</th></tr>
-			<tr><td>🥈</td><td>G1</td><td class='left'>劉品吟、陳艾琳、邱文心</td><td class='left'>Let's Live in TAIPEI</td><td><a href='1.pdf'>📖</a></td><td><a href='https://bit.ly/LiveInTP'>🧿</a></td></tr>
-			<tr><td>🏅</td><td>G2</td><td class='left'>劉向倢、邵旻純、廖原平</td><td class='left'>心理測驗──推薦公館的早餐/早午餐店</td><td><a href='2.pdf'>📖</a></td><td><a href='https://shelleeshao.shinyapps.io/Breakfaster/'>🧿</a></td></tr>
-			<tr><td></td><td>G4</td><td class='left'>江偉銘、林穎東、藍巧穎</td><td class='left'>台灣蛙類的時空分布</td><td><a href='4.pdf'>📖</a></td><td><a href='https://r05228032.shinyapps.io/midworks/'>🧿</a></td></tr>
-			<tr><td></td><td>G5</td><td class='left'>葉乃慈、魏筱蓉、張儒斌</td><td class='left'>台灣人平日旅次</td><td><a href='5.pdf'>📖</a></td><td><a href='https://rbr06521523.shinyapps.io/taiwanese_daily_life/'>🧿</a></td></tr>
-			<tr><td></td><td>G6</td><td class='left'>黃語如、林尚薇、李欣儒</td><td class='left'>貧窮</td><td><a href='6.pdf'>📖</a></td><td><a href='https://hsinjuli.shinyapps.io/Poverty/'>🧿</a></td></tr>
-			<tr><td></td><td>G7</td><td class='left'>陳柏宇</td><td class='left'>台北市竊盜事件之空間分析</td><td><a href='7.pdf'>📖</a></td><td><a href='https://gururu.shinyapps.io/bike/'>🧿</a></td></tr>
-			<tr><td></td><td>G8</td><td class='left'>賴聰儀、陳立恆、簡明柔</td><td class='left'>台北交通事故空間分布</td><td><a href='8.pdf'>📖</a></td><td><a href='https://go253697.shinyapps.io/output/'>🧿</a></td></tr>
-			<tr><td>🏅</td><td>G9</td><td class='left'>廖容瑾、李依倢</td><td class='left'>關於台大理學院</td><td><a href='9.pdf'>📖</a></td><td><a href='https://rongjing.shinyapps.io/College_Science_NTU/'>🧿</a></td></tr>
-			<tr><td>🥇</td><td>G10</td><td class='left'>劉怡慧、廖晧宇、謝澤星</td><td class='left'>客製化租屋挑選系統</td><td><a href='10.pdf'>📖</a></td><td><a href='https://r05228019.shinyapps.io/Mid-project/'>🧿</a></td></tr>
-			<tr><td></td><td>G11</td><td class='left'>朱志泓、賴禹朋</td><td class='left'>股票K線圖與籌碼分析</td><td><a href='11.pdf'>📖</a></td><td><a href='https://hankchu.shinyapps.io/midterm_project_r057220252/'>🧿</a></td></tr>
-			<tr><td></td><td>G12</td><td class='left'>王博群</td><td class='left'>新北市公立高中申請入學PR值與人口密度</td><td><a href='12.pdf'>📖</a></td><td><a href='https://nicopeterwang.shinyapps.io/home_2/'>🧿</a></td></tr>
-			<tr><td>🥈</td><td>G13</td><td class='left'>廖章鈞、王崧阡、郭飛鷹</td><td class='left'>交通事故視覺化探索暨即時公車資訊提供</td><td><a href='13.pdf'>📖</a></td><td><a href='https://fykuofelix.shinyapps.io/midtermproject/'>🧿</a></td></tr>
-			<tr><td>🥈</td><td>G14</td><td class='left'>許仁瑋</td><td class='left'>GPS資料線上處理軟體</td><td><a href='14.pdf'>📖</a></td><td><a href='https://pipi.shinyapps.io/midreport/'>🧿</a></td></tr>
-			<tr><td>🏅</td><td>G15</td><td class='left'>楊宇翔、劉恒、劉子立</td><td class='left'>台灣地區肺、支氣管及氣管癌粗死亡率空間分佈</td><td><a href='15.pdf'>📖</a></td><td><a href='https://phineees.shinyapps.io/facts_about_cancer_mortality/'>🧿</a></td></tr>
-			<tr><td>🥉</td><td>G16</td><td class='left'>田梓伶、賴冠宇、吳家禎</td><td class='left'>淚水積聚，汗水蒸發：台灣棒球的夢想輪輪迴</td><td><a href='16.pdf'>📖</a></td><td><a href='https://guan.shinyapps.io/baseball/'>🧿</a></td></tr>
-			<tr><td></td><td>G17</td><td class='left'>賴秉圻</td><td class='left'>文山區鄰里公園</td><td><a href='17.pdf'>📖</a></td><td><a href='https://robrigado.shinyapps.io/gyuu/'>🧿</a></td></tr>
-			<tr><td>🥉</td><td>G18</td><td class='left'>方皓聖、黃夢萍</td><td class='left'>台北市竊盜事件觀察</td><td><a href='18.pdf'>📖</a></td><td><a href='https://haoshengfang.shinyapps.io/TaipeiThievery/'>🧿</a></td></tr>
-			<tr><td></td><td>G19</td><td class='left'>陳冠甫、羅宇志、張宗翰</td><td class='left'>Facebook資料爬蟲＆視覺化</td><td><a href='19.pdf'>📖</a></td><td><a href='https://c1204545.shinyapps.io/my_app1/'>🧿</a></td></tr>
-			<tr><td>🏅</td><td>G20</td><td class='left'>林彥廷</td><td class='left'>票票不等值？立委選制十年觀</td><td><a href='20.pdf'>📖</a></td><td><a href='https://mumimumi.shinyapps.io/Project01/'>🧿</a></td></tr>
-			<tr><td></td><td>G21</td><td class='left'>李俊毅、詹玟、黃彥蓉</td><td class='left'>Air Pollution in Taipei and New Taipei City</td><td><a href='21.pdf'>📖</a></td><td><a href='http://140.119.55.171:3838/amy/test5/'>🧿</a></td></tr>
-			<tr><td></td><td>G22</td><td class='left'>蕭士傑</td><td class='left'>Housing Data Analysis</td><td><a href='22.pdf'>📖</a></td><td><a href='https://angushsiao74.shinyapps.io/midterm0331/'>🧿</a></td></tr>
+			<tr><td>🥈</td><td>G1</td><td>劉品吟、陳艾琳、邱文心</td><td>Let's Live in TAIPEI</td><td><a href='1.pdf'>📖</a></td><td><a href='https://bit.ly/LiveInTP'>🧿</a></td></tr>
+			<tr><td>🏅</td><td>G2</td><td>劉向倢、邵旻純、廖原平</td><td>心理測驗──推薦公館的早餐/早午餐店</td><td><a href='2.pdf'>📖</a></td><td><a href='https://shelleeshao.shinyapps.io/Breakfaster/'>🧿</a></td></tr>
+			<tr><td></td><td>G4</td><td>江偉銘、林穎東、藍巧穎</td><td>台灣蛙類的時空分布</td><td><a href='4.pdf'>📖</a></td><td><a href='https://r05228032.shinyapps.io/midworks/'>🧿</a></td></tr>
+			<tr><td></td><td>G5</td><td>葉乃慈、魏筱蓉、張儒斌</td><td>台灣人平日旅次</td><td><a href='5.pdf'>📖</a></td><td><a href='https://rbr06521523.shinyapps.io/taiwanese_daily_life/'>🧿</a></td></tr>
+			<tr><td></td><td>G6</td><td>黃語如、林尚薇、李欣儒</td><td>貧窮</td><td><a href='6.pdf'>📖</a></td><td><a href='https://hsinjuli.shinyapps.io/Poverty/'>🧿</a></td></tr>
+			<tr><td></td><td>G7</td><td>陳柏宇</td><td>台北市竊盜事件之空間分析</td><td><a href='7.pdf'>📖</a></td><td><a href='https://gururu.shinyapps.io/bike/'>🧿</a></td></tr>
+			<tr><td></td><td>G8</td><td>賴聰儀、陳立恆、簡明柔</td><td>台北交通事故空間分布</td><td><a href='8.pdf'>📖</a></td><td><a href='https://go253697.shinyapps.io/output/'>🧿</a></td></tr>
+			<tr><td>🏅</td><td>G9</td><td>廖容瑾、李依倢</td><td>關於台大理學院</td><td><a href='9.pdf'>📖</a></td><td><a href='https://rongjing.shinyapps.io/College_Science_NTU/'>🧿</a></td></tr>
+			<tr><td>🥇</td><td>G10</td><td>劉怡慧、廖晧宇、謝澤星</td><td>客製化租屋挑選系統</td><td><a href='10.pdf'>📖</a></td><td><a href='https://r05228019.shinyapps.io/Mid-project/'>🧿</a></td></tr>
+			<tr><td></td><td>G11</td><td>朱志泓、賴禹朋</td><td>股票K線圖與籌碼分析</td><td><a href='11.pdf'>📖</a></td><td><a href='https://hankchu.shinyapps.io/midterm_project_r057220252/'>🧿</a></td></tr>
+			<tr><td></td><td>G12</td><td>王博群</td><td>新北市公立高中申請入學PR值與人口密度</td><td><a href='12.pdf'>📖</a></td><td><a href='https://nicopeterwang.shinyapps.io/home_2/'>🧿</a></td></tr>
+			<tr><td>🥈</td><td>G13</td><td>廖章鈞、王崧阡、郭飛鷹</td><td>交通事故視覺化探索暨即時公車資訊提供</td><td><a href='13.pdf'>📖</a></td><td><a href='https://fykuofelix.shinyapps.io/midtermproject/'>🧿</a></td></tr>
+			<tr><td>🥈</td><td>G14</td><td>許仁瑋</td><td>GPS資料線上處理軟體</td><td><a href='14.pdf'>📖</a></td><td><a href='https://pipi.shinyapps.io/midreport/'>🧿</a></td></tr>
+			<tr><td>🏅</td><td>G15</td><td>楊宇翔、劉恒、劉子立</td><td>台灣地區肺、支氣管及氣管癌粗死亡率空間分佈</td><td><a href='15.pdf'>📖</a></td><td><a href='https://phineees.shinyapps.io/facts_about_cancer_mortality/'>🧿</a></td></tr>
+			<tr><td>🥉</td><td>G16</td><td>田梓伶、賴冠宇、吳家禎</td><td>淚水積聚，汗水蒸發：台灣棒球的夢想輪輪迴</td><td><a href='16.pdf'>📖</a></td><td><a href='https://guan.shinyapps.io/baseball/'>🧿</a></td></tr>
+			<tr><td></td><td>G17</td><td>賴秉圻</td><td>文山區鄰里公園</td><td><a href='17.pdf'>📖</a></td><td><a href='https://robrigado.shinyapps.io/gyuu/'>🧿</a></td></tr>
+			<tr><td>🥉</td><td>G18</td><td>方皓聖、黃夢萍</td><td>台北市竊盜事件觀察</td><td><a href='18.pdf'>📖</a></td><td><a href='https://haoshengfang.shinyapps.io/TaipeiThievery/'>🧿</a></td></tr>
+			<tr><td></td><td>G19</td><td>陳冠甫、羅宇志、張宗翰</td><td>Facebook資料爬蟲＆視覺化</td><td><a href='19.pdf'>📖</a></td><td><a href='https://c1204545.shinyapps.io/my_app1/'>🧿</a></td></tr>
+			<tr><td>🏅</td><td>G20</td><td>林彥廷</td><td>票票不等值？立委選制十年觀</td><td><a href='20.pdf'>📖</a></td><td><a href='https://mumimumi.shinyapps.io/Project01/'>🧿</a></td></tr>
+			<tr><td></td><td>G21</td><td>李俊毅、詹玟、黃彥蓉</td><td>Air Pollution in Taipei and New Taipei City</td><td><a href='21.pdf'>📖</a></td><td><a href='http://140.119.55.171:3838/amy/test5/'>🧿</a></td></tr>
+			<tr><td></td><td>G22</td><td>蕭士傑</td><td>Housing Data Analysis</td><td><a href='22.pdf'>📖</a></td><td><a href='https://angushsiao74.shinyapps.io/midterm0331/'>🧿</a></td></tr>
 		</table>
       </div>
 	</div>
+	<script>
+	$('td:nth-child(3),th:nth-child(3)').hide();
+	$('td:nth-child(4)').css("text-align","left");
+	</script>
   </body>
 </html>
