--- a/REPORT/1072FinReport/index.html
+++ b/REPORT/1072FinReport/index.html
@@ -41,13 +41,13 @@
 			<tr 2><td></td><td>G2</td><td>何雨潔、劉雨函</td>
 				<td>明亮設施與住宅竊盜</td>
 				<td><a href="G2.pdf">📖</a></td><td><a href="G2.html">💻</a></td></tr>
-			<tr 3><td style="text-align:center;">🏅</td><td>G3</td><td>吳季寬、楊于晨、吳杰恩</td>
+			<tr 3><td>🏅</td><td>G3</td><td>吳季寬、楊于晨、吳杰恩</td>
 				<td>地理學的風水練習：殯葬設施與交通事故的空間相關性初探</td>
 				<td><a href="G3.pdf">📖</a></td><td><a href="G3_1.html">💻</a><a href="G3_2.html">💻</a><a href="G3_3.html">💻</a></td></tr>
-			<tr 4><td style="text-align:center;">🥉</td><td>G4</td><td>呂方雯</td>
+			<tr 4><td>🥉</td><td>G4</td><td>呂方雯</td>
 				<td>在同婚專法通過以前…台北市456里公投第10案空間分析</td>
 				<td><a href="G4.pdf">📖</a></td><td><a href="G4.html">💻</a></td></tr>
-			<tr 5><td style="text-align:center;">🥉</td><td>G5</td><td>龔泓愷、廖昱嘉、何承諭</td>
+			<tr 5><td>🥉</td><td>G5</td><td>龔泓愷、廖昱嘉、何承諭</td>
 				<td>西北太平洋歷史颱風路徑之比對搜尋系統</td>
 				<td><a href="G5.pdf">📖</a></td><td><a href="G5_1.html">💻</a><a href="G5_2.html">💻</a></td></tr>
 			<tr 6><td></td><td>G6</td><td>盧淨婕、楊鎧綾、甘佳昀</td>
@@ -62,16 +62,16 @@
 			<tr 9><td></td><td>G9</td><td>陳竑屹、林柏翰、陳奕儒</td>
 				<td>我們的小孩很乖，都是不良場所帶壞他的！</td>
 				<td><a href="G9.pdf">📖</a></td><td><a href="G9.html">💻</a></td></tr>
-			<tr 10><td style="text-align:center;">🏅</td><td>G10</td><td>沈俊成、劉蔧嫻、楊紫軒</td>
+			<tr 10><td>🏅</td><td>G10</td><td>沈俊成、劉蔧嫻、楊紫軒</td>
 				<td>探討A型肝炎與HIV之相關性與空間關係</td>
 				<td><a href="G10.pdf">📖</a></td><td><a href="G10.html">💻</a></td></tr>
-			<tr 11><td style="text-align:center;">🥇</td><td>G11</td><td>游博翔、林豊傑、陳冠榮</td>
+			<tr 11><td>🥇</td><td>G11</td><td>游博翔、林豊傑、陳冠榮</td>
 				<td>偏遠學校行動書車設點位置評估</td>
 				<td><a href="G11.pdf">📖</a></td><td><a href="G11.html">💻</a><a href="G11_2.html">💻</a></td></tr>
-			<tr 12><td style="text-align:center;">🥈</td><td>G12</td><td>許維庭、洪筱涵</td>
+			<tr 12><td>🥈</td><td>G12</td><td>許維庭、洪筱涵</td>
 				<td>公車班次與站點群聚現象──路網自相關 </td>
 				<td><a href="G12.pdf">📖</a></td><td><a href="G12_1.html">💻</a><a href="G12_2.html">💻</a></td></tr>
-			<tr 13><td style="text-align:center;">🏅</td><td>G13</td><td>蕭羽軒、潘芸柔、蔡耀萱</td>
+			<tr 13><td>🏅</td><td>G13</td><td>蕭羽軒、潘芸柔、蔡耀萱</td>
 				<td>i郵箱在哪裡？i郵箱設置與投遞失敗率之空間分析</td>
 				<td><a href="G13.pdf">📖</a></td><td><a href="G13.html">💻</a></td></tr>
 			<tr 14><td></td><td>G14</td><td>殷楷智、李弘恩</td>
@@ -86,5 +86,9 @@
 		  </table>
       </div>
 	</div>
+	<script>
+	$('td:nth-child(3),th:nth-child(3)').hide();
+	$('td:nth-child(4)').css("text-align","left");
+	</script>
   </body>
 </html>
