更新網頁內容與附件

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<h1>空間分析</h1>
 					<p>
 						課號：Geog2017 & Geog5069<br>
-						授課老師：溫在弘　　課程助教：杜承軒<br>
+						授課老師：溫在弘<br>
 						<a href="EXAM/"  class="button icon fa-lightbulb-o exam" target="_self"> 歷年考古題</a>
 						<a href="REPORT/"  class="button icon fa-graduation-cap exam" target="_self">學生作品集</a>
 					</p>
@@ -49,7 +49,6 @@
 					<a class="button icon fa-youtube red" href="https://youtu.be/veGrpLBIu7A">助教課影片</a>
 					<br/>
 					<a class="button icon fa-globe orange" href="OTHER/TA_map.html">地圖繪製範例教學</a>
-					<a class="button icon fa-globe orange" href="OTHER/Quiz1.html">小考參考解答</a>
 					<hr>
 
 					<h2>【2】R實作GIS套件</h2>
