--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 			<section id="main" style="padding-left: 0px;padding-right: 0px;padding-top: 20px;padding-bottom: 20px;">
 				<header>
 					<h1>空間分析</h1>
-					<p>
+					<p >
 						課號：Geog2017 & Geog5069<br>
-						教材提供及授課：溫在弘<br>
-						網頁建置及更新：杜承軒、廖思采<br>
+						<span style="font-size: 0.8em">授課教授：溫在弘</span><br>
+						<span style="font-size: 0.8em">網頁建置及維護：杜承軒、廖思采</span><br>
 						<a href="EXAM/"  class="button icon fa-lightbulb-o exam" target="_self"> 歷年考古題</a>
 						<a href="REPORT/"  class="button icon fa-graduation-cap exam" target="_self">學生作品集</a>
 					</p>
